--- a/plugin.xml
+++ b/plugin.xml
@@ -43,7 +43,8 @@
 
         <config-file target="*-Info.plist" parent="UIBackgroundModes">
             <array>
-                <string>audio</string>
+                <string>bluetooth-central</string>      
+                <string>remote-notification</string>
             </array>
         </config-file>
 
