--- a/plugin.xml
+++ b/plugin.xml
@@ -74,7 +74,7 @@
         <config-file target="AndroidManifest.xml" parent="/manifest/application">
             <service
               android:name="de.appplant.cordova.plugin.background.ForegroundService"
-              android:foregroundServiceType="dataSync"
+              android:foregroundServiceType="connectedDevice"
               android:exported="false">
             </service>
         </config-file>
@@ -91,7 +91,7 @@
         </config-file>
 
         <config-file target="AndroidManifest.xml" parent="/manifest">
-            <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
+            <uses-permission android:name="android.permission.FOREGROUND_SERVICE_CONNECTED_DEVICE" />
         </config-file>
 
         <source-file
